kubernetes/apps/base/media/emby/service.yaml
# Emby LoadBalancer Service
#
# Exposes Emby on 10.10.2.30:80
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
  labels:
    app.kubernetes.io/name: emby
    app.kubernetes.io/part-of: media
  annotations:
    io.cilium/lb-ipam-ips: "10.10.2.30"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: emby
  ports:
    - name: http
      port: 80
      targetPort: 8096
      protocol: TCP
